update post: 📅Day-6 Striver’s SDE Sheet |  Arrays Part 2 Find the Repeating and Missing Number , Count inversions in an array

--- a/cmdlx59n7000002jv6bu31gx2.md
+++ b/cmdlx59n7000002jv6bu31gx2.md
@@ -1,10 +1,10 @@
 ---
-title: "📅Day-6 Striver’s SDE Sheet |  Find the Repeating and Missing Number , Count inversions in an array"
+title: "📅Day-6 Striver’s SDE Sheet |  Arrays Part 2 Find the Repeating and Missing Number , Count inversions in an array"
 seoTitle: "Repeating and Missing Number: Day 6 SDE Sheet"
 seoDescription: "Join my 27-day DSA journey tackling "Find the Repeating and Missing Number" and "Count Inversions in an Array." Optimize your coding skills!"
 datePublished: Sun Jul 27 2025 16:54:03 GMT+0000 (Coordinated Universal Time)
 cuid: cmdlx59n7000002jv6bu31gx2
-slug: day-6-strivers-sde-sheet-find-the-repeating-and-missing-number-count-inversions-in-an-array
+slug: day-6-strivers-sde-sheet-arrays-part-2-find-the-repeating-and-missing-number-count-inversions-in-an-array
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1753617267189/4f322e22-65ce-41f3-8f48-76475ce10f04.png
 ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1753635119758/7739ebc7-fc70-4fda-a4ee-af35404e9918.png
 tags: code, java, technology, coding, hashnode, dsa, coding-challenge, coding-journey, dsainjava, dsa-series, striver-dsa-sheet, striversa2zdsa, striversdesheet, payalkumari11, dsawithpayal
