update post: 📅Week-3 (Day 1) - 🍅 Let’s Build a Zomato-like Food Delivery App – Tomato! | System Design Explained with UML

--- a/cmb7re0k3000h09l42439e6qc.md
+++ b/cmb7re0k3000h09l42439e6qc.md
@@ -191,7 +191,7 @@ After successful order → notify via email, SMS, or push notification.
 
 👉 *"Tomato 🍅 app ban gaya!"*
 
-![]( align="center")
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1757420406466/30a69e95-60f4-4559-8234-58a51aca5e48.png align="center")
 
 ## 💠 Code: My GitHub Repo
 
